# FastHTML-Template

./: .env  .env.example  .gitignore  .sesskey  Makefile  Makefile-ubuntu  README.md  auth_changes.patch  main.py  pyproject.toml  route_collector.py
.github/: template-configuration.yml
.github/workflows/: template-setup.yml
app/components/admin_dashboard/: modal_form.py  model_table.py  renderers.py
app/components/application/: __init__.py  navbar.py  sidebar.py
app/components/auth/: login.py  profile_forms.py  registration.py
app/models/: __init__.py  base.py
app/models/auth/: models.py
app/pages/: conctact.py  index.py  pricing.py
app/pages/application/: tables.py
app/pages/auth/: login.py  logout.py
app/pages/err/: page404.py
app/pages/templates/: template.py
app/routes/: __init__.py  about.py  conctact.py
app/routes/api/: hello.py
app/routes/auth/: callback.py  logout.py  profile.py  register.py
app/routes/err/: page404.py
app/routes/templates/: __init__.py  template.py
app/services/auth/: fasthtml_auth.py
app/services/db/: db.py
app/utils/: validators.py
config/: settings.py
migrations/: env.py
notebooks/: .sesskey  FastHTML.ipynb
notebooks/.ipynb_checkpoints/: FastHTML-checkpoint.ipynb
project/: .sesskey  main.py  route_collector.py
project/app/components/: __init__.py  app_navbar.py  home.py  templates.py  toaster.py
project/app/models/: base.py
project/app/pages/: about.py  (+2 more)
project/config/: settings.py
project/static/: tailwind.config.js
scripts/: create_page.py  post_template_setup.py
src/: main.py
(+66 files in other folders)
